<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/menu_setting"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        >
        <!-- add option -->
        <Switch
            android:id="@+id/sw_setting_before_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_move_before_test"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_move_before_test"
            />

        <Switch
            android:id="@+id/sw_mode_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_mode_login"
            android:switchPadding="20dp"
            />


    </LinearLayout>


</LinearLayout>
